Squashed commit of the following:
commit 2d34d737ec3232b5c6909446e7a59a8d163f11cf
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Jun 23 18:12:37 2022 -0500

    blood pressure add today record, actions and validations

commit a5c5d259eb44bc4f87239870245343b3dd5c7746
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Jun 23 16:00:08 2022 -0500

    create🙂 useTitleScroll utility

commit d0176b1c9284a5d68d526650649184679e5e885c
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Jun 23 11:26:07 2022 -0500

    add custom hook to handle form values in blood pressure

commit e3126c9bfa6c7295488c29a8e8ccc70088859119
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Jun 11 01:40:04 2022 -0500

    clean code and refactor blood pressure meassuring screen

commit 65358c8dc0a66fdd78dcbf1fd2e954d03a78cf5c
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Jun 10 20:52:44 2022 -0500

    add useTimer hook and implement in blood pressure > preparation and steps and modify stepsHeader component

commit fac0a18b11bf23d3b6212c3b3ad34a8f52727242
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Jun 6 15:55:38 2022 -0500

    add images to blood pressure > preparation and translations

commit 0ad0102b059af16fc16e0405e1514f191b0141b8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Jun 6 09:34:55 2022 -0500

    change ui in blood pressure > prepartion screen and add bold font

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -82,6 +82,100 @@
     "custom": "Personalizar",
     "custom_description": "Define la hora y la frecuencia"
   },
+  "BloodPressure/Preparation": {
+    "title": "Preparación del paciente antes de medir la presión arterial",
+    "p1": "Tener la vejiga vacía.",
+    "p1HighligthText": [
+      "vejiga vacía."
+    ],
+    "p2": "Descansar en una silla, en un ambiente tranquilo durante 5 minutos.",
+    "p2HighligthText": [
+      "5 minutos."
+    ],
+    "p3": "No haber comido, ingerido bebidas con cafeína, fumado ni haber practicado ninguna actividad física en los 30 minutos anteriores a la toma de la presión arterial.",
+    "p3HighligthText": [
+      "30 minutos"
+    ]
+  },
+  "BloodPressure/Steps": {
+    "steps": [
+      {
+        "title": "No conversar",
+        "image": "",
+        "description": "Hablar o escuchar de forma activa agrega hasta \n10 mmHg",
+        "highLighWord": [
+          "10 mmHg"
+        ]
+      },
+      {
+        "title": "APOYAR EL BRAZO A LA ALTURA DEL CORAZÓN",
+        "image": "",
+        "description": "No apoyar el brazo agrega hasta 10 mmHg",
+        "highLighWord": [
+          "10 mmHg"
+        ]
+      },
+      {
+        "title": "COLOCAR EL MANGUITO EN EL BRAZO SIN ROPA",
+        "image": "",
+        "description": "La ropa gruesa agrega hasta 5-50 mmHg",
+        "highLighWord": [
+          "5-50 mmHg"
+        ]
+      },
+      {
+        "title": "USAR EL TAMAÑO DE MANGUITO ADECUADO",
+        "image": "",
+        "description": "Un manguito pequeño agrega de 2 a 10 mmHg",
+        "highLighWord": [
+          "2 a 10 mmHg"
+        ]
+      },
+      {
+        "title": "APOYAR LOS PIES",
+        "image": "",
+        "description": "No apoyar los pies agrega hasta 6 mmHg",
+        "highLighWord": [
+          "6 mmHg"
+        ]
+      },
+      {
+        "title": "NO CRUZAR LAS PIERNAS",
+        "image": "",
+        "description": "Tener las piernas cruzadas agrega de 2 a 8 mmHg",
+        "highLighWord": [
+          "2 a 8 mmHg"
+        ]
+      },
+      {
+        "title": "TENER LA VEJIGA VACÍA",
+        "image": "",
+        "description": "Tener la vejiga llena agrega hasta 10 mmHg",
+        "highLighWord": [
+          "10 mmHg"
+        ]
+      },
+      {
+        "title": "APOYAR LA ESPALDA",
+        "image": "",
+        "description": "No apoyar la espalda agrega hasta 6 mmHg",
+        "highLighWord": [
+          "6 mmHg"
+        ]
+      }
+    ]
+  },
+  "BloodPressure/Meassuring": {
+    "title": "Registro de Presión Arterial",
+    "header_title": "Presión arterial",
+    "date":"Fecha",
+    "time": "Hora",
+    "dia": "Diastólica",
+    "sys": "Sistólica",
+    "heart_rate": "Ritmo cardiaco",
+    "add_note": "Agregar una nota",
+    "placeholder_add_note": "¿tienes algo para contar?"
+  },
   "notifications": {
     "blood_pressure": {
       "title": "%{name} es hora de medir la presión arterial",
@@ -126,7 +220,9 @@
     "confirm": "confirmar",
     "finish": "finalizar",
     "add": "agregar",
-    "cancel": "cancelar"
+    "cancel": "cancelar",
+    "nextin": "siguiente en (%{countDown})",
+    "start": "Empezar"
   },
   "select": "Seleccionar",
   "headerSearch": {
