--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -82,6 +82,85 @@
     "custom": "Personalizar",
     "custom_description": "Define la hora y la frecuencia"
   },
+  "BloodPressure/Steps": {
+    "steps": [
+      {
+        "title": "No conversar",
+        "image": "",
+        "description": "Hablar o escuchar de forma activa agrega hasta \n10 mmHg",
+        "highLighWord": [
+          "10 mmHg"
+        ]
+      },
+      {
+        "title": "APOYAR EL BRAZO A LA ALTURA DEL CORAZÓN",
+        "image": "",
+        "description": "No apoyar el brazo agrega hasta 10 mmHg",
+        "highLighWord": [
+          "10 mmHg"
+        ]
+      },
+      {
+        "title": "COLOCAR EL MANGUITO EN EL BRAZO SIN ROPA",
+        "image": "",
+        "description": "La ropa gruesa agrega hasta 5-50 mmHg",
+        "highLighWord": [
+          "5-50 mmHg"
+        ]
+      },
+      {
+        "title": "USAR EL TAMAÑO DE MANGUITO ADECUADO",
+        "image": "",
+        "description": "Un manguito pequeño agrega de 2 a 10 mmHg",
+        "highLighWord": [
+          "2 a 10 mmHg"
+        ]
+      },
+      {
+        "title": "APOYAR LOS PIES",
+        "image": "",
+        "description": "No apoyar los pies agrega hasta 6 mmHg",
+        "highLighWord": [
+          "6 mmHg"
+        ]
+      },
+      {
+        "title": "NO CRUZAR LAS PIERNAS",
+        "image": "",
+        "description": "Tener las piernas cruzadas agrega de 2 a 8 mmHg",
+        "highLighWord": [
+          "2 a 8 mmHg"
+        ]
+      },
+      {
+        "title": "TENER LA VEJIGA VACÍA",
+        "image": "",
+        "description": "Tener la vejiga llena agrega hasta 10 mmHg",
+        "highLighWord": [
+          "10 mmHg"
+        ]
+      },
+      {
+        "title": "APOYAR LA ESPALDA",
+        "image": "",
+        "description": "No apoyar la espalda agrega hasta 6 mmHg",
+        "highLighWord": [
+          "6 mmHg"
+        ]
+      }
+    ]
+  },
+  "BloodPressure/Meassuring": {
+    "title": "Registro de Presión Arterial",
+    "header_title": "Presión arterial",
+    "date":"Fecha",
+    "time": "Hora",
+    "dia": "Diastólica",
+    "sys": "Sistólica",
+    "heart_rate": "Ritmo cardiaco",
+    "add_note": "Add a note",
+    "placeholder_add_note": "something you want to mention?"
+  },
   "notifications": {
     "blood_pressure": {
       "title": "%{name} es hora de medir la presión arterial",
@@ -126,7 +205,9 @@
     "confirm": "confirm",
     "finish": "finish",
     "add": "add",
-    "cancel": "cancel"
+    "cancel": "cancel",
+    "nextin": "siguiente en (%{countDown})",
+    "start": "Empezar"
   },
   "select": "Seleccionar",
   "headerSearch": {
