Squashed commit of the following:
commit 913297c10796803592693b8d2ef9be986d251e8d
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Jul 13 14:19:00 2022 -0500

    add show todayRecords and improve visualization

commit e1dc3af6806af6f91e201a9b798d03e07deca054
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Jul 13 11:58:03 2022 -0500

    set locale of dayjs to i18n.locale and improve BarChart component

commit 5b231a9b625512bcb2955bd913b377275d2fca88
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Jul 13 10:51:27 2022 -0500

    improve data visualization of the BarChar component

commit f4a30fae5282e708ad354ada755e7bb3fc22db33
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Jul 13 09:22:17 2022 -0500

    fix BarChar bug with NaN values and improve styles

commit 4b7708f1bf4e1a5bec0555a41e7534be8fe3e446
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Tue Jul 12 17:17:00 2022 -0500

    add useResume hook to get blood pressure records per week

commit 19d91553608a99a1dee1f7b623238892302b81fa
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Jul 11 10:22:11 2022 -0500

    refactor realm access to write and read data

commit e1991769dee6da5fe198fea6e7a19b8ba08dd87b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Jul 10 18:26:56 2022 -0500

    setup flipper debugger

commit 897f8dda73d61f028ebbede30d94b4428fa8e54b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Jul 10 15:45:25 2022 -0500

    sync blood pressure data between device and realm service

commit 8f5389f048ce91c4c2b1592fc112ba1ddaf65c38
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Jul 8 22:00:07 2022 -0500

    setup blood-pressure-realm save service

commit e9d94ca41d0c132433fa4793845dac274e95b76b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Jun 24 19:54:04 2022 -0500

    set version 0.3.0 and lauch

commit de00d4afd88a404ca49ca9ace52a6efcaea4fb92
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Jun 24 19:45:41 2022 -0500

    WIP

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,7 +68,8 @@
       "reminders": "Recordatorios"
     },
     "sys": "Sistólica",
-    "dia": "Diastólica"
+    "dia": "Diastólica",
+    "today_records_title": "Mis mediciones de hóy"
   },
   "BloodPressure/Reminders": {
     "title": "Recordatorios",
