Squashed commit of the following:
commit ca37464a3d393d78c0cbb9a90a70d09b7f48b1a3
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Aug 8 15:55:52 2022 -0500

    add full-text-search selfcare tip

commit b299fff0cb3fede6c9f379193b6fa3962936a6f8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Aug 1 11:36:58 2022 -0500

    add custom hook useSelfcareForm, improve styles on every platform

commit 049ba39a828c548dedcea3cb4e699362dee374ae
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Jul 31 20:42:10 2022 -0500

    refactor inputToggle to semi tabs

commit 689184246ffb473b0963e1ca5045b9d450e449c3
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Jul 23 17:39:37 2022 -0500

    add selfcare screen and init searchBar for Android

commit 7384cae615d8073b04bf3d760e3f1de26b1c62a8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Jul 23 12:29:26 2022 -0500

    add tabs navigation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -170,6 +170,25 @@
       "android_channel_description": "Canal para recordarte realizar las mediciones de presión arterial"
     }
   },
+  "Tabs": {
+    "summary": "Summary",
+    "search": "Search"
+  },
+  "TabsSearch": {
+    "header": {
+      "title": "Autocuidado",
+      "placeholder": "Buscar Tips"
+    }
+  },
+  "AddSelfCareTip": {
+    "title": "Titulo",
+    "description": "Descripción",
+    "aimed_at": "Dirigido a",
+    "tabs": {
+      "professionals": "Profesionales",
+      "patients": "Pacientes"
+    }
+  },
   "days": {
     "monday": "Lunes",
     "tuesday": "Martes",
