--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -202,7 +202,9 @@
     "tabs": {
       "professionals": "Profesionales",
       "patients": "Pacientes"
-    }
+    },
+    "keywords": "Palabras clave",
+    "keywords_hints": "separa con una coma cada palabra clave"
   },
   "days": {
     "monday": "Lunes",
