Squashed commit of the following:
commit 7a230180dabebb90e0ff0be0a1803b80a39ebeb5
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Aug 8 21:29:49 2022 -0500

    Feat(profile): Add profileUrl and fullName

commit 04be2621f3ca094f43c51c866a5cd173139167db
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Aug 8 21:29:06 2022 -0500

    Feat(selfcare): Add loading wordings and toast fallbacks

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -178,7 +178,8 @@
     "header": {
       "title": "Autocuidado",
       "placeholder": "Buscar Tips"
-    }
+    },
+    "loading": "buscando tips"
   },
   "AddSelfCareTip": {
     "title": "Titulo",
@@ -189,7 +190,8 @@
       "patients": "Pacientes"
     },
     "keywords": "Palabras clave",
-    "keywords_hints": "separa con una coma cada palabra clave"
+    "keywords_hints": "separa con una coma cada palabra clave",
+    "successToast": "Tip creado correctamente"
   },
   "days": {
     "monday": "Lunes",
