--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,15 +1,16 @@
 {
+  "welcome": {
+    "title": "Bienvenido",
+    "start_button": "Iniciar",
+    "continue_with_email": "continuar con email",
+    "not_account": "¿No tienes una cuenta?",
+    "singup": "Registrarme"
+  },
   "verify_phone": {
     "title": "Verficación",
     "subtitle": "Ingresa el código de 6 digitos que te enviamos al numero de celular %{phone}",
     "no_code": "¿No recibiste el código?",
     "resend": "Reenviar en %{time}"
-  },
-  "login_screen": {
-    "title": "Log in",
-    "subtitle": "Ingresa con tu número de celular",
-    "not_account": "Do not have an account?",
-    "singup": "Singup"
   },
   "singup_screen": {
     "title": "Registro",
@@ -242,5 +243,6 @@
     "title": "!Oh no¡, Something Went Wrong",
     "bodyText": "The app ran into a problem and could not continue. We aplologise foy any inconvenience this has caused! Press the button below to restart the app. Please contact us if this issue persists",
     "buttonText": "Back to Home screen"
-  }
+  },
+  "phone number": "phone number"
 }
