--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -10,21 +10,30 @@
     "no_code": "¿No recibiste el código?",
     "resend": "Reenviar en %{time}"
   },
-  "singup_screen": {
+  "singup": {
     "title": "Registro",
-    "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros.",
-    "full_name": "Nombre completo",
+    "subtitle": "Vamos a necesitar algunos datos para completar tu registro.",
+    "name": "Nombres",
+    "lastName": "Apellidos",
     "document_id": "Número de identificación",
-    "document_id_hint": "cédula de ciudadania"
+    "document_id_hint": "cédula de ciudadania, DNI, pasaporte"
   },
   "birthdate_screen": {
-    "title": "Cumpleaños",
-    "birthdate": "Fecha de nacimiento",
+    "title": "¿Cuando es tu cumpleaños?",
+    "birthdate": "Queremos saber la fecha en que naciste para celebrar tus cumpleaños",
     "address": "Dirección de donde vives",
     "address_hint": "Ej. dirección, ciudad, departamento"
   },
   "select_user": {
-    "title": "Tipo de usuario"
+    "title": "Elige tu rol",
+    "description": "Selecciona el rol con el que quieres usar la aplicaión"
+  },
+  "selectAvatar": {
+    "title": "Seleciona una foto de perfil",
+    "modify": "Modificar",
+    "add": "Agregar",
+    "take_photo": "Tomar Fotografia",
+    "Seleccionar de mi galeria": "Seleccionar de mi galeria"
   },
   "healt_info_screen": {
     "title": "Información de Salud",
@@ -261,5 +270,8 @@
     "bodyText": "La aplicación tuvo un problema y no pudo continuar. ¡Nos disculpamos por cualquier inconveniente que esto haya causado!. Presiona el botón de abajo para reiniciar la aplicación. Contacta con nosotros si este problema persiste",
     "buttonText": "Regresar a la pantalla de inicio"
   },
-  "phone number": "numero celular"
+  "phone number": "numero celular",
+  "sex": "Sexo",
+  "men": "hombre",
+  "women": "mujer"
 }
