Squashed commit of the following:
commit 3ccf41717a3c0a73abe2450b0a126865399991fb
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Aug 24 13:54:12 2022 -0500

    feat(welcome): Add link to loggin with email

commit bb08737cf75fc4de454826505c766efb3dc3bf4d
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Aug 24 13:50:21 2022 -0500

    feat(welcome): Add better phone validation

commit 45ad4b1d527f8af22ba10f35efa992f8bc01dd72
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Aug 24 13:35:10 2022 -0500

    feat(verifyPhone): Add countDownTimer

commit 4941213ca1b9273490649f18c0643d1c11679f9b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Tue Aug 23 13:09:10 2022 -0500

    refactor(signup realm): refactor move provider of location and change sigin implementation

commit 704b458f04889ac79c088530ca1f69d611c43843
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Tue Aug 23 12:29:43 2022 -0500

    feature(signup flow): Add mainContex, modify parser to api, refactor code

commit ae9c5401f9dc57a79898b2b3b9bdae6e34787dad
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Aug 22 18:45:37 2022 -0500

    refactor(signin flow): add new thunks, rename, clean code, move logic

commit b2335a67a714ce1d7f175f78147e3105832c4b6f
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Aug 20 20:20:18 2022 -0500

    Refactor(signinFlow): Add wording, change gender by sex, resolve bugs

commit db1194ff82d48375ee619f1dbe8cf18d66438c3a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Aug 20 15:58:33 2022 -0500

    Refactor(Auth): Change onAuthStateChanged handler

commit 8dc1e6742672729eb01f3830b747fae52d4eb66f
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Aug 20 12:44:05 2022 -0500

    Refactor(login): change login to welcome screen how initial screen

    Feat(welcome): Add gif to welcome screen

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,34 +1,41 @@
 {
+  "welcome": {
+    "title": "Bienvenido",
+    "start_button": "Iniciar",
+    "continue_with_email": "Continuar con email"
+  },
   "verify_phone": {
     "title": "Verficación",
     "subtitle": "Ingresa el código de 6 digitos que te enviamos al numero de celular %{phone}",
     "no_code": "¿No recibiste el código?",
-    "resend": "Reenviar en %{time}"
+    "resendTimer": "Reenviar en ",
+    "resendCode": "Reenviar código",
+    "try_other_method": "Probar otro metodo"
   },
-  "login_screen": {
-    "title": "Iniciar sesión",
-    "subtitle": "Ingresa con tu número de celular",
-    "not_account": "¿No tienes una cuenta?",
-    "singup": "Registrarme"
-  },
-  "singup_screen": {
+  "singup": {
     "title": "Registro",
-    "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros.",
-    "full_name": "Nombre completo",
+    "subtitle": "Vamos a necesitar algunos datos para completar tu registro.",
+    "name": "Nombres",
+    "lastName": "Apellidos",
     "document_id": "Número de identificación",
-    "document_id_hint": "cédula de ciudadania",
-    "phone_number": "Número de celular",
-    "all_ready_account": "¿Ya tienes una cuenta?",
-    "log_in": "Iniciar sesión"
+    "document_id_hint": "cédula de ciudadania, DNI, pasaporte"
   },
   "birthdate_screen": {
-    "title": "Cumpleaños",
-    "birthdate": "Fecha de nacimiento",
+    "title": "¿Cuando es tu cumpleaños?",
+    "birthdate": "Selecciona tu fecha de nacimiento.",
     "address": "Dirección de donde vives",
     "address_hint": "Ej. dirección, ciudad, departamento"
   },
   "select_user": {
-    "title": "Tipo de usuario"
+    "title": "Elige tu rol",
+    "description": "Selecciona el rol con el que quieres usar la aplicaión"
+  },
+  "selectAvatar": {
+    "title": "Seleciona una foto de perfil",
+    "modify": "Modificar",
+    "add": "Agregar",
+    "take_photo": "Tomar Fotografia",
+    "Seleccionar de mi galeria": "Seleccionar de mi galeria"
   },
   "healt_info_screen": {
     "title": "Información de Salud",
@@ -264,5 +271,9 @@
     "title": "¡Ooh no! Algo salió Mal.",
     "bodyText": "La aplicación tuvo un problema y no pudo continuar. ¡Nos disculpamos por cualquier inconveniente que esto haya causado!. Presiona el botón de abajo para reiniciar la aplicación. Contacta con nosotros si este problema persiste",
     "buttonText": "Regresar a la pantalla de inicio"
-  }
+  },
+  "phone number": "numero celular",
+  "sex": "Sexo",
+  "men": "hombre",
+  "women": "mujer"
 }
