--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -45,6 +45,17 @@
     "thrombosis": "¿Has tenido trombosis cerebral? (enfermedad cerebrovascular)",
     "nephropathy": "¿Tienes problemas renales? (enfermedad renal cronica)"
   },
+  "medicine_info_screen": {
+    "title": "Registrar Medicamento",
+    "medicine": "Nombre del medicamento",
+    "type": "Tipo de presentación del medicamento",
+    "dose": "Dosis del medicamento",
+    "concurrence": "Concurrencia",
+    "period": "Periodo que debe tomar el medicamento",
+    "dateStart": "Fecha Inicio",
+    "dateEnd": "Fecha Fin",
+    "keep_medicine": "Guardar nuevo medicamento"
+  },
   "skip_app_alert": {
     "title": "¡Espera!",
     "subtitle": "¿Seguro quieres salir de la applicación?",
@@ -275,5 +286,8 @@
   "phone number": "numero celular",
   "sex": "Sexo",
   "men": "hombre",
-  "women": "mujer"
+  "women": "mujer",
+  "medicineDose": "Medicinas",
+  "dose": "Dosis",
+  "hourDose": "Hora"
 }
