Squashed commit of the following:
commit e1db7fb4cbbb8931399d7ca1a501cb0d32764d4d
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Sep 16 14:59:00 2022 -0500

    fixes(severals): refactor timers and restore styles

commit c9b5fa38cd2cf1054d4f1bfa22fa3c1d43a012a0
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Sep 16 11:47:26 2022 -0500

    refactor(thunks): refactor error handling

commit ff49f0633301364902fc8cb4bbf40dad3c399cdb
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Sep 16 11:43:26 2022 -0500

    feature(blood-pressure-schema): modify schema config

commit 64f8cb8f2f4541559818e041004bc0faea1e11e0
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Sep 16 11:03:22 2022 -0500

    feature(users): add better error handling

commit 47cc5d269bab30cf00d0c0bfafc70b792d2dc80f
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Sep 15 21:00:38 2022 -0500

    feature(summary): refactor measurements styles

commit a8357c23b9971af72e70974d5ff531b1e75a6a68
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Sep 15 16:37:26 2022 -0500

    feature(user): add request to get user details

commit 67e5815f375dfaa840c0411dd608e11a63a0b373
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Sep 15 12:40:53 2022 -0500

    feat(startUserSessionThunk): add only request

commit c15b581ea92bcecf4c13886907db56b82d3c31af
Merge: fc096eb d65f013
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Sep 14 17:37:32 2022 -0500

    Merge branch 'develop' of github.com-jcaviedesc:jcaviedesc/blood-pressure-app into feature/push-notifications

commit fc096eb33c31a8b7add897d62aae72b53b6e72f0
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Sep 7 21:34:16 2022 -0500

    WIP useNotifications

commit 5020ba0a4bdd264f74f6e6bee06842cbfcb8ff96
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Sep 1 18:58:52 2022 -0500

    feature(push-notifications): add set device token on bootstrap app

commit b6b35b83db1b8af1f9885ba5820c27cb0d904e45
Author: jc

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -200,6 +200,11 @@
     "summary": "Resumen",
     "search": "Buscar"
   },
+  "measurements":{
+    "BloodPressure": "Presión Arterial",
+    "Weight": "Peso Corporal",
+    "Height": "Estatura"
+  },
   "TabsSearch": {
     "header": {
       "title": "Autocuidado",
@@ -234,8 +239,6 @@
   "do_not_know": "NO SÉ",
   "date": "Fecha",
   "measuring": "Medición",
-  "blood_pressure": "Presión Arterial",
-  "heart_rate": "Ritmo cardiaco ",
   "weight": "Peso",
   "height": "Altura",
   "validation": {
