Squashed commit of the following:
commit 5a416c7dee9f64ae09cebfcdad31fb91250f9aa2
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Sep 21 17:41:28 2022 -0500

    create version 0.4.6

commit f65aebcc87782e0ae24d093f02681916e405024b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Sep 21 17:39:38 2022 -0500

    feat(summary): add thunk to update measurements with last measurement

commit 741b5303641b22624d47f3bab18b041fee02f307
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Sep 21 15:42:17 2022 -0500

    fix(reminders): change store value of location from redux to asyncstorage

commit ed6669e1781e27d80b4ecde16eb92963db197d0d
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Tue Sep 20 21:16:39 2022 -0500

    fix(realm): fix open realm sync in blood pressure route

commit c5cf8e682e196cae21cae01b7b1688fd25678f12
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Sep 18 19:31:32 2022 -0500

    refactor notification channel to send messages and updae realmsync config

commit ca742c910651d459535def5ab9eb4ee89a02fcdd
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Sep 16 20:59:05 2022 -0500

    feature(bloodpressure): add handler error in the hook useResume

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,7 +72,7 @@
   },
   "Home/BloodPressure": {
     "title": "Presión Arterial",
-    "sub_title": "Estadística por %{time}",
+    "sub_title": "Resumen por %{time}",
     "action_sheet": {
       "take_bp": "Registrar presión arterial",
       "tensiometer": "Validar tensiómetro",
