Squashed commit of the following:
commit aff016ad08464372df613d29ca7b578f15a915fe
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Sep 25 17:04:34 2022 -0500

    feature(profile): add basic profile info

commit 7f69bb2914c40bf03b5c8ad757951794350c24df
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Sep 25 14:50:38 2022 -0500

    add Avatar component

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -282,5 +282,15 @@
   "phone number": "numero celular",
   "sex": "Sexo",
   "men": "hombre",
-  "women": "mujer"
+  "women": "mujer",
+  "profile": {
+    "title": "Perfil",
+    "name": "Nombres",
+    "lastname": "Apellidos",
+    "sex": "Sexo",
+    "date of birth": "Fecha de nacimiento",
+    "logout": "Cerrar sesión",
+    "F": "Femenino",
+    "M": "Masculino"
+  }
 }
